--- a/index.html
+++ b/index.html
@@ -4,34 +4,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Name - Personal Website</title>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS file -->
+    <title>Your Name - Resume</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Your Name - Resume</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
+
+    <!-- Header with Tabs -->
     <header>
-        <h1>Welcome to My Personal Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Your Name</h1>
+            <p class="title">Web Developer | Designer | Freelancer</p>
+            <nav>
+                <ul>
+                    <li><a href="javascript:void(0);" class="tablink" onclick="openTab(event, 'about')">About</a></li>
+                    <li><a href="javascript:void(0);" class="tablink" onclick="openTab(event, 'experience')">Experience</a></li>
+                    <li><a href="javascript:void(0);" class="tablink" onclick="openTab(event, 'skills')">Skills</a></li>
+                    <li><a href="javascript:void(0);" class="tablink" onclick="openTab(event, 'education')">Education</a></li>
+                    <li><a href="javascript:void(0);" class="tablink" onclick="openTab(event, 'contact')">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Write a short bio or introduction.</p>
-    </section>
-    <section id="portfolio">
-        <h2>My Work</h2>
-        <p>Showcase some of your projects or work here.</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Share ways for people to contact you.</p>
-    </section>
+
+    <!-- Tab content sections -->
+    <div class="tab-content" id="about">
+        <section>
+            <h2>About Me</h2>
+            <p>Hello! I'm Your Name, a passionate web developer and designer with over 5 years of experience in creating interactive and user-friendly websites. I specialize in front-end development, UI/UX design, and responsive web design. I'm always looking for exciting projects to collaborate on!</p>
+        </section>
+    </div>
+
+    <div class="tab-content" id="experience">
+        <section>
+            <h2>Work Experience</h2>
+            <div class="job">
+                <h3>Senior Web Developer</h3>
+                <p><strong>Company Name</strong> | <em>January 2020 - Present</em></p>
+                <ul>
+                    <li>Developed and maintained responsive websites using HTML, CSS, JavaScript, and React.</li>
+                    <li>Collaborated with design teams to implement user-friendly UI and improve user experience.</li>
+                    <li>Integrated APIs and third-party services for e-commerce functionality.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Junior Web Developer</h3>
+                <p><strong>Company Name</strong> | <em>June 2017 - December 2019</em></p>
+                <ul>
+                    <li>Assisted in the development of websites using HTML5, CSS3, and JavaScript.</li>
+                    <li>Worked closely with senior developers to ensure high-quality code and project timelines.</li>
+                    <li>Contributed to the development of internal tools to streamline workflows.</li>
+                </ul>
+            </div>
+        </section>
+    </div>
+
+    <div class="tab-content" id="skills">
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML5 & CSS3</li>
+                <li>JavaScript & React</li>
+                <li>Responsive Web Design</li>
+                <li>Version Control (Git)</li>
+                <li>UI/UX Design</li>
+                <li>PHP & MySQL</li>
+            </ul>
+        </section>
+    </div>
+
+    <div class="tab-content" id="education">
+        <section>
+            <h2>Education</h2>
+            <div class="education">
+                <h3>Bachelor of Science in Computer Science</h3>
+                <p><strong>University Name</strong> | <em>Graduated: May 2017</em></p>
+                <p>Specialized in web development, algorithms, and data structures.</p>
+            </div>
+        </section>
+    </div>
+
+    <div class="tab-content" id="contact">
+        <section>
+            <h2>Contact Information</h2>
+            <p>If you'd like to get in touch or discuss potential opportunities, feel free to reach out via the contact form or using the details below:</p>
+
+            <!-- Link to Google Form -->
+            <p><strong>Fill out my contact form here:</strong></p>
+            <p><a href="https://forms.gle/your-google-form-link" target="_blank" class="contact-link">Contact Form</a></p>
+
+            <p>Alternatively, you can contact me directly:</p>
+            <ul>
+                <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
+                <li>Phone: +1 (555) 123-4567</li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">yourname</a></li>
+                <li>GitHub: <a href="https://github.com/yourname" target="_blank">yourname</a></li>
+            </ul>
+        </section>
+    </div>
+
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <div class="container">
+            <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+        </div>
     </footer>
+
+    <!-- JavaScript for Tabs -->
+    <script>
+        function openTab(evt, tabName) {
+            var i, tabcontent, tablinks;
+
+            // Hide all tabs
+            tabcontent = document.getElementsByClassName("tab-content");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+
+            // Remove "active" class from all tab links
+            tablinks = document.getElementsByClassName("tablink");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+
+            // Show the clicked tab and add an "active" class to the link
+            document.getElementById(tabName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+
+        // Open the "About" tab by default
+        document.getElementsByClassName("tablink")[0].click();
+    </script>
 </body>
 </html>
