--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Name - Resume</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Name - Resume</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
+    <title>Nikhil Kamlapure - Resume</title>
+    <link rel="stylesheet" href="styles.css"> style.css
 </head>
 <body>
 
     <!-- Header with Tabs -->
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p class="title">Web Developer | Designer | Freelancer</p>
+            <h1>Nikhil Kamlapure</h1>
+            <p class="title">Teamcenter Developer | Freelancer</p>
             <nav>
                 <ul>
                     <li><a href="javascript:void(0);" class="tablink" onclick="openTab(event, 'about')">About</a></li>
@@ -35,7 +30,8 @@
     <div class="tab-content" id="about">
         <section>
             <h2>About Me</h2>
-            <p>Hello! I'm Your Name, a passionate web developer and designer with over 5 years of experience in creating interactive and user-friendly websites. I specialize in front-end development, UI/UX design, and responsive web design. I'm always looking for exciting projects to collaborate on!</p>
+            <p>Hello! I'm Nikhil Kamlapure, a passionate Teamcenter developer with over 9 years of experience.</p>
+                <!--I specialize in front-end development, UI/UX design, and responsive web design. I'm always looking for exciting projects to collaborate on!-->
         </section>
     </div>
 
@@ -43,8 +39,8 @@
         <section>
             <h2>Work Experience</h2>
             <div class="job">
-                <h3>Senior Web Developer</h3>
-                <p><strong>Company Name</strong> | <em>January 2020 - Present</em></p>
+                <h3>Senior Teamcenter Developer</h3>
+                <p><strong>Kyndryl</strong> | <em>October 2021 - Present</em></p>
                 <ul>
                     <li>Developed and maintained responsive websites using HTML, CSS, JavaScript, and React.</li>
                     <li>Collaborated with design teams to implement user-friendly UI and improve user experience.</li>
@@ -52,7 +48,7 @@
                 </ul>
             </div>
             <div class="job">
-                <h3>Junior Web Developer</h3>
+                <h3>Junior Teamcenter Developer</h3>
                 <p><strong>Company Name</strong> | <em>June 2017 - December 2019</em></p>
                 <ul>
                     <li>Assisted in the development of websites using HTML5, CSS3, and JavaScript.</li>
@@ -83,7 +79,7 @@
             <div class="education">
                 <h3>Bachelor of Science in Computer Science</h3>
                 <p><strong>University Name</strong> | <em>Graduated: May 2017</em></p>
-                <p>Specialized in web development, algorithms, and data structures.</p>
+                <p>Specialized in Teamcenter development, algorithms, and data structures.</p>
             </div>
         </section>
     </div>
@@ -99,17 +95,15 @@
 
             <p>Alternatively, you can contact me directly:</p>
             <ul>
-                <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
-                <li>Phone: +1 (555) 123-4567</li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">yourname</a></li>
-                <li>GitHub: <a href="https://github.com/yourname" target="_blank">yourname</a></li>
+                <li>Email: <a href="mailto:yourname@example.com">nikhil.kamlapure1@gmail.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/nikhil-kamlapure-4847b1165/" target="_blank">Nikhil Kamlapure</a></li>
             </ul>
         </section>
     </div>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+            <p>&copy; 2025 Nikhil Kamlapure. All Rights Reserved.</p>
         </div>
     </footer>
 
@@ -140,3 +134,4 @@
     </script>
 </body>
 </html>
+
