--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nikhil Kamlapure - Resume</title>
-    <link rel="stylesheet" href="https://github.com/nikhilkamlapure/portfolio/blob/main/style.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
 
@@ -134,5 +134,6 @@
     </script>
 </body>
 </html>
+
 
 
